Fri Nov  5 13:42:11 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/bmake.mpd:

          Added a template variable called debug_macros.  The contents of
          this variable is included into the compile flags for a debug build
          only.  Also, fixed the realclean target to check for a value in
          GENERATED_DIRTY before attempting to delete it.

Tue Nov  2 09:43:38 2004  Chad Elliott  <elliott_c@ociweb.com>

        * USAGE:

          Added a section to document MPC related environment variables.

        * modules/Options.pm:

          If the argument to -include is a relative path, prepend the
          current working directory to the path.  Also, removed the
          deprecated -static_only option.

Sun Oct 31 15:40:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/cbx.mpd:
          Just exclude the complete Template_Files folder instead of all files
          individually

Fri Oct 29 11:15:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/cbx.mpd:
          Set the page size to 4096 by default in a debug build

Fri Oct 29 09:17:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/cbx.mpd:
          Exclude template files from build in MinGW and GCC

Thu Oct 28 06:23:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/cbx.mpd:
          Added needed compiler options and generate the needed include paths
          in the bcc32 part, removed generate of $(BCB) includes, these are
          not needed.

Mon Oct 25 12:18:27 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/BMakeWorkspaceCreator.pm:
        * modules/NMakeWorkspaceCreator.pm:

          Added the 'generated' target.  This target, which exists in the
          other make based projects, will generate all generated source
          files.

        * templates/automake.mpd:

          Removed unnecessary uses of <%foreach%>.

        * templates/bmake.mpd:
